--- a/.github/workflows/My-Portofolio.yml
+++ b/.github/workflows/My-Portofolio.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: production-files
-          path: /dist
+          path: ./dist
   # Deploy Job 
   deploy:
   # Add a dependency to the build job
@@ -31,9 +31,9 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: production-files
-          path: /dist
+          path: ./dist
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github token: ${{ secrets.MYPORTOFOLIO_TOKEN }}
-          publish dir: /dist
+          github_token: ${{ secrets.MYPORTOFOLIO_TOKEN }}
+          publish_dir: ./dist
