--- a/.github/workflows/My-Portofolio.yml
+++ b/.github/workflows/My-Portofolio.yml
@@ -13,6 +13,8 @@ jobs:
           node-version: 18.x
       - name: Install Dependencies
         run: npm install
+      - name: Fix vite permissions
+        run: chmod +x node_modules/.bin/vite
       - name: Build Project
         run: npm run build
       - name: Upload artifact to enable deployment
